[project]
name = "neural_de"
description='Image enhancement library: corruption (noise, meteorological...), removal"'
readme = "README.md"
dynamic = ["dependencies"]
version= "1.1.0"
license ="MPL-2.0"
requires-python = ">=3.9,<3.11"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements_python39.txt"]}

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
 